[tool.poetry]
name = "aibe_dev"
version = "0.1.0"
description = ""
authors = ["Siddarth Singh <siddarthsingh.eminence@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
rich = "^13.9.4"
pymongo = "^4.11"
pinecone-text = "^0.9.0"
fastapi-socketio = "^0.0.10"
pinecone = "^5.4.2"
google-cloud-secret-manager = "^2.22.1"
openai = "^1.61.0"
beautifulsoup4 = "^4.13.3"
langchain = "^0.3.17"
langchain-community = "^0.3.16"
langchain-openai = "^0.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
